<resources>
    <string name="app_name">Transit Pulse</string>
    <string name="title_section1">MTA Transit Status</string>
    <string name="title_section2">Transit Map</string>
    <string name="title_section3">Penis.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Fuck You LoL.</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About App&#8230;</string>
    <string name="hello_world">Herro Rorld</string>
    <string name="title_activity_trip">Transit Map</string>
    <string name="title_activity_license">Open Source Licenses</string>
    <string name="license_button">View License</string>
    <string name="about_licensing">
        This app was built with awesome technologies, here is where I give praise to the libraries that make this app come to life!
    </string>
    <string name="fragment_loading">Loading Information&#8230;</string>
    <string name="title_activity_about">About Transit Pulse</string>
    <string name="about_app">
        When making this app I had convenience and ease of use in mind. New York City is all about convenience,
        from the moment you open this app I wanted the user to be met with all viable and
        up to the minute information about the MTA subway system.\n
        As a student, who also works and travels frequently throughout all five boroughs
        of the city, I felt there was something missing in the current offering of transit apps
        that cater to the city; convenience, information, <u>and</u> ease of use.
    </string>
    <string name="ada_warning">
        The service change affects one or more ADA accessible stations. Please call 511 for help with planning your trip.\n
        If you are deaf or hard of hearing use your preferred relay service provider or the free 711 relay.
    </string>
    <string name="facebook_shimmer">Facebook Shimmer</string>
    <string name="facebook_shimmer_license">
        <pre>
BSD License

For Shimmer software

Copyright (c) 2014, Facebook, Inc. All rights reserved.

Redistribution and use in source and binary forms, with or without modification,
are permitted provided that the following conditions are met:

 * Redistributions of source code must retain the above copyright notice, this
   list of conditions and the following disclaimer.

 * Redistributions in binary form must reproduce the above copyright notice,
   this list of conditions and the following disclaimer in the documentation
   and/or other materials provided with the distribution.

 * Neither the name Facebook nor the names of its contributors may be used to
   endorse or promote products derived from this software without specific
   prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR
ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
        </pre>
    </string>
    <string name="http_request">http-request</string>
    <string name="http_request_license">
        <pre>
            Copyright (c) 2014 Kevin Sawicki kevinsawicki@gmail.com

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
        </pre>
    </string>
    <string name="commons_csv">Apache Commons CSV</string>
    <string name="simple_xml">Simple XML</string>
    <string name="stikky_header">Stikky Headers</string>
    <string name="android_open_source">Android Open Source Project</string>
    <string name="google_play">Google Play Services</string>
    <string name="protocol_buffers">Google Protocol Buffers</string>
</resources>