<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.mastrgamr.transitpulse.LicenseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_licensing"
                android:id="@+id/textView"
                android:paddingBottom="10dp"
                android:textIsSelectable="false"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook_shimmer"
                android:id="@+id/textView1"
                style="?android:attr/listSeparatorTextViewStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_button"
                android:id="@+id/button_facebook_shimmer"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/http_request"
                android:id="@+id/textView2"
                style="?android:attr/listSeparatorTextViewStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_button"
                android:id="@+id/button_http_request"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commons_csv"
                android:id="@+id/textView3"
                style="?android:attr/listSeparatorTextViewStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_button"
                android:id="@+id/button_commons_csv"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simple_xml"
                android:id="@+id/textView4"
                style="?android:attr/listSeparatorTextViewStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_button"
                android:id="@+id/button_simple_xml"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stikky_header"
                android:id="@+id/textView5"
                style="?android:attr/listSeparatorTextViewStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_button"
                android:id="@+id/button_stikky_header"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_open_source"
                android:id="@+id/textView6"
                style="?android:attr/listSeparatorTextViewStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_button"
                android:id="@+id/button_android_open_source"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_play"
                android:id="@+id/textView7"
                style="?android:attr/listSeparatorTextViewStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_button"
                android:id="@+id/button_google_play"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protocol_buffers"
                android:id="@+id/textView8"
                style="?android:attr/listSeparatorTextViewStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_button"
                android:id="@+id/button_protocol_buffers"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
